sweet-shoppe/src/app/pagenotfound/pagenotfound.component.scss
/*
  Center Main Page Content Vertically & Horizontally
*/
  .page-wrapper {
      display: table;
      width: 100%;
      height: 100%; /* For at least Firefox */
      min-height: 100%;
    }
    .page-wrapper-inner {
      display: table-cell;
      vertical-align: top;
    }
    .center-container {
      margin-right: auto;
      margin-left: auto;
    }
     /*
    * Main Body Content
    */
    .content {
      padding: 0 20px;
      text-align: center;
    }
  
    /*
   * Affix and center
   */
   @media (max-width: 767px) {
      .page-wrapper-inner {
        padding-top: 15%;
      }
   
      
   }
   
   @media (min-width: 768px) {
     .page-wrapper-inner {
       vertical-align: middle; /* Start the vertical centering */
     }
   
     .center-container {
       width: 700px;
     }
   }


   .help-text {
     font-weight: 600;
     font-size: 1.3em;
   }

